--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -44,7 +44,7 @@
 			</div>
 			<div class="room-chat">
 			<div class="col-md-12">
-				<p style="text-align: center; border-bottom: 1px silver solid; width: 100%;">Xin chào bạn đến với Room&emsp;&emsp; <span id="TENROM"></span><input type="submit" value="LogRoom" style="float: right; padding: 5px 20px; background: #2E3CEE;color:#fff;" id="logout"></p>
+				<p style="text-align: center; border-bottom: 1px silver solid; width: 100%;">Xin chào bạn đến với Room <span id="TENROM"></span>&emps;&emsp;&emsp;<input type="submit" value="LogRoom" style="float: right; padding: 5px 20px; background: #2E3CEE;color:#fff;" id="logout"></p>
 				<div class="noidung-chat" >
 					
 				</div>
